Fix Edit alignment (#17596)

--- a/src/applications/appeals/10182/sass/10182-nod.scss
+++ b/src/applications/appeals/10182/sass/10182-nod.scss
@@ -79,7 +79,6 @@ dl.review {
     margin-inline-start: 0; /* override user agent */
     text-align: left;
     margin: 3rem 3.5rem 0 5rem;
-    width: 100%;
   }
 
   dd.widget-content.widget-edit {
